--- a/src/assets/styles/00_utils/_1_variables.scss
+++ b/src/assets/styles/00_utils/_1_variables.scss
@@ -1,5 +1,58 @@
-$color-primary: #ff6060;
-$color-secondary: #f6f6f6;
-$color-white: white;
+// $color-primary: #ff6060;
+// $color-secondary: #f6f6f6;
+// $color-white: white;
 $emptyStars: grey;
 
+$color-primary: #9356dc;
+$color-secondary: #ff79da;
+$color-tertiary: #99e2d0;
+$color-accent: #d6fff5;
+$color-white: #fff;
+$color-invalid: #db464b;
+
+/*** Background ***/
+// $bg-color-main: #f6f6f6;
+$bg-color-main: black;
+$bg-color-localization: #eaeaea;
+
+/*** Fonts ***/
+$color-logo-font: #101010;
+$color-location-font: #353535;
+$color-green-font: #008766;
+$color-nav-ico: #7e7e7e;
+
+$bg_linear-gradient: linear-gradient(
+    -193.33deg,
+    #ff79da -11.44%,
+    #9356dc 123.93%
+);
+$bg_linear-gradient--hover: linear-gradient(
+    -193.33deg,
+    #ff79dae5 -11.44%,
+    #9356dce5 123.93%
+);
+$bg_linear-gradient-2: linear-gradient(
+    200.64deg,
+    #9356dc 0.2%,
+    #ff79da 550.74%
+);
+$anime_linear-gradient: linear-gradient(
+    90deg,
+    #9356dc,
+    #ff79da,
+    #9356dc,
+    #ff79da
+);
+
+$bg_nav-card: #f7f7f7;
+
+$breakpoints: (
+    "mobile-s": 320px,
+    "mobile-m": 480px,
+    "tablet-portrait": 768px,
+    "tablet-landscape": 1024px,
+    "desktop-standard": 1200px,
+    "desktop-large": 1440px,
+    "desktop-extra-large": 1920px,
+    "4k": 2560px,
+);
