--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,31 +1,13 @@
 @import "./00_utils/1_variables";
+@import "./00_utils/2_functions";
 @import "./00_utils/3_mixins";
 
+// @import "./01_a-skins/color-1";
+// @import "./01_a-skins/color-2";
+// @import "./01_a-skins/color-3";
+// @import "./01_a-skins/color-4";
+// @import "./01_a-skins/color-5";
 
 @import "./01_base/01_base";
 @import "./01_base/02_fonts";
-
-
-@import "./02_components/00_BannerCard";
-@import "./02_components/01_collapse";
-@import "./02_components/02_form";
-@import "./02_components/03_carousel";
-@import "./02_components/04_stars";
-@import "./02_components/05_lodgingHost";
-
-@import "./04_layout/00_header";
-@import "./04_layout/99_footer";
-
-@import "./05_pages/01_Home";
-@import "./05_pages/02_Logement";
-@import "./05_pages/03_ERROR";
-@import "./05_pages/03_About";
-
-
-
-@import "./99_responsive/1440";
-@import "./99_responsive/375";
-
-@import "./100_animation/01_animation";
-
 
