--- a/src/components/ThemeSelector/e.css
+++ b/src/components/ThemeSelector/e.css
@@ -3,21 +3,25 @@
     width: 200px;
     border: 1px solid var(--bg-black-50);
     border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
     background-color: var(--bg-black-100);
     position: fixed;
-    right: 0;
-    top: 60px;
+    left: 0;
+    bottom: 60px;
     z-index: 101;
     transition: all 0.3s ease;
-    transform: translateX(100%);
+    transform: translateX(-100%);
+    display: flex;
+    flex-flow: column;
 }
 .open {
-    transform: translateX(-25px);
+    transform: translateX(0px);
 }
 .style-switcher .s-icon {
     width: 40px;
     height: 40px;
-    margin-right: 25px;
+    margin-left: 12.5px;
     border: 1px solid var(--bg-black-50);
     border-radius: 50%;
     background-color: var(--bg-black-100);
@@ -27,14 +31,20 @@
     text-align: center;
 
     position: absolute;
-    right: 100%;
+    left: 100%;
 
     cursor: pointer;
     transition: all 0.3s ease;
+    /* border: 1px solid #000; */
 }
-/* .style-switcher .s-icon i {
-    line-height: 40px;
-} */
+.style-switcher #blck {
+    /* border: 1px solid #000; */
+    display: block;
+    flex: 1;
+
+    width: 100px;
+    height: 100px;
+}
 .style-switcher-toggler {
     top: 0px;
 }
@@ -59,6 +69,7 @@
     height: 30px;
     border: 1px solid var(--bg-black-50);
     border-radius: 50%;
+    cursor: pointer;
 }
 .style-switcher .color-1 {
     background-color: #ec1839;
