--- a/src/index.scss
+++ b/src/index.scss
@@ -4,13 +4,16 @@
     --bg-black-50: #e8dfec;
     --text-black-900: #302e4d;
     --text-black-700: #504e70;
+    --text-black-500: #706e93;
 }
+
 body.dark {
     --bg-black-900: #151515;
     --bg-black-100: #222222;
     --bg-black-50: #393939;
     --text-black-900: #fff;
     --text-black-700: #e9e9e9e9;
+    --text-black-500: #d3d3d3;
 }
 body {
     line-height: 1.5;
@@ -24,7 +27,6 @@ body {
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
-    
 }
 ::before,
 ::after {
