--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -9,8 +9,8 @@
     color: var(--text-black-900);
     position: relative;
     &-content {
-        flex: 0 0 87.47130206625124%;
-        max-width: 87.47130206625124%;
+        // flex: 0 0 87.47130206625124%;
+        // max-width: 87.47130206625124%;
         & .about-text {
             @include flex_100;
             & h3 {
