--- a/src/assets/styles/00_utils/_1_variables.scss
+++ b/src/assets/styles/00_utils/_1_variables.scss
@@ -1,20 +1,7 @@
-:root {
-    --bg-black-900: #f2f2fc;
-    --bg-black-100: #fdf9ff;
-    --bg-black-50: #e8dfec;
-    --text-black-900: #302e4d;
-    --text-black-700: #504e70;
-    --text-black-500: #706e93;
-}
+$bg-black-900-light: #f2f2fc;
+$bg-black-900-dark: #151515;
 
-body.dark {
-    --bg-black-900: #151515;
-    --bg-black-100: #222222;
-    --bg-black-50: #393939;
-    --text-black-900: #fff;
-    --text-black-700: #e9e9e9e9;
-    --text-black-500: #d3d3d3;
-}
+$shadow-rgba: rgba(48, 46, 77, 0.15);
 
 $emptyStars: grey;
 
