--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -1,7 +1,31 @@
 /****** [General] ******/
 // @import "./02_fonts";
+:root {
+    --bg-black-900: #f2f2fc;
+    --bg-black-100: #fdf9ff;
+    --bg-black-50: #e8dfec;
+    --text-black-900: #302e4d;
+    --text-black-700: #504e70;
+    --text-black-500: #706e93;
+}
 
-// Utilisez les couleurs pour définir les variables CSS
+body.dark {
+    --bg-black-900: #151515;
+    --bg-black-100: #222222;
+    --bg-black-50: #393939;
+    --text-black-900: #fff;
+    --text-black-700: #e9e9e9e9;
+    --text-black-500: #d3d3d3;
+    .modal {
+        background-color: rgba-color($bg-black-900-dark, 0.5);
+        .content {
+            box-shadow: 0 0 20px invert-rgba($shadow-rgba);
+        }
+    }
+    .service .service_container .service-item .service-item-inner:hover {
+        box-shadow: 0 0 20px invert-rgba($shadow-rgba);
+    }
+}
 
 body {
     line-height: 1.5;
@@ -9,6 +33,7 @@ body {
     font-family: "Poppins", sans-serif;
     overflow-x: hidden !important;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -29,7 +54,7 @@ h3,
 h4,
 h5,
 h6 {
-    text-transform: capitalize;
+    // text-transform: lowercase;
 }
 .section {
     display: flex;
