--- a/src/assets/styles/01_base/_02_pages.scss
+++ b/src/assets/styles/01_base/_02_pages.scss
@@ -13,8 +13,10 @@
         flex-flow: column nowrap;
         justify-content: space-between;
         min-height: 100vh;
+        width: 100%;
         .row_top {
             align-self: flex-start;
+            width: 100%;
             .section-title {
                 display: block;
                 align-self: flex-start;
@@ -25,6 +27,7 @@
                 h2 {
                     @include h2;
                     position: relative;
+                    left: 0;
 
                     &::before,
                     &::after {
@@ -46,6 +49,7 @@
         }
         .row_center {
             align-self: center;
+            width: 100%;
         }
         .col_end {
             height: 60px;
