--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -1,26 +1,41 @@
+@import "../../assets/styles/00_utils/3_mixins";
+@import "../../assets/styles/00_utils/1_variables";
+@import "../../assets/styles/00_utils/2_functions";
+
 .modal {
     position: fixed;
-    width: 100%;
-    min-height: 100%;
-    top: 0;
-    left: 0px;
+    width: calc(100vw - 270px); // 270px = header on left
+    min-height: calc(100vh - 117px);
+    // min-height: calc(100vh);
+
+    top: 117px;
+    left: 270px; // 270px = header on left
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    background-color: rgba-color($bg-black-900-light, 0.5);
+    // background-color: red;
+    // border: 1px solid #000;
     .content {
         position: relative;
+        top: -30px;
+
         overflow: hidden;
-        background: white;
+        margin-right: 1%;
         min-width: 300px;
         min-height: 100px;
         border-radius: 7px;
+        width: 62.5%;
+        box-shadow: 0 0 20px $shadow-rgba;
+        
         button {
             position: absolute;
             top: 4px;
-            right: 0px;
+            left: calc(100% - 40px);
             border: none;
             background-color: transparent;
+
             svg {
                 position: relative;
             }
